--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   position: fixed;
   top: 0;
   left: 0;
+  padding-right: 10px;
   z-index: 1;
   display: flex;
   align-items: center;
@@ -88,7 +89,3 @@
   overflow: hidden;
   text-overflow: ellipsis;
 }
-
-.im-logo {
-  max-width: 100%;
-  opacity: .75; }
